Closed Bug 743101 Opened 14 years ago Closed 14 years ago

Assertion failure: srcArgs.callee().toFunction()->native() == native || srcArgs.callee().toFunction()->native() == js_generic_native_method_dispatcher, at jswrapper.cpp:788

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: decoder, Assigned: jorendorff)

Details

(Keywords: assertion, testcase, Whiteboard: js-triage-needed [jsbugmon:update])

Attachments

(1 file)

The following test asserts on mozilla-central revision da0d07b5ca1e (options -m -n -a): var assertThrowsInstanceOf = function assertThrowsInstanceOf(f, ctor, msg) { f(); } function testcase(obj, fn) { var args = Array.slice(arguments, 2); assertThrowsInstanceOf(function () { fn.apply(obj, args); }, TypeError); } function test(obj) { testcase(obj, Map.prototype.size); } test((newGlobal('new-compartment')));
The first bad revision is: changeset: 3f51e7052b7d user: Jason Orendorff date: Thu Mar 01 09:01:45 2012 -0600 summary: Add Map.prototype.size and Set.prototype.size. Bug 726298, r=luke.
Assignee: general → jorendorff
Attached patch v1Splinter Review
Assigning to djvj for no good reason. :)
Attachment #612913 - Flags: review?(kvijayan)
Attachment #612913 - Flags: review?(kvijayan) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
A testcase for this bug was automatically identified at js/src/jit-test/tests/collections/bug-743101.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: